test: remove code smells