@@ -1,17 +1,12 @@
 package com.fiap.techfood.infrastructure.repository;
 
 import com.fiap.techfood.application.interfaces.gateways.ProductRepository;
-import com.fiap.techfood.domain.commons.HttpStatusCodes;
-import com.fiap.techfood.domain.commons.exception.BusinessException;
 import com.fiap.techfood.domain.products.Product;
 import com.fiap.techfood.infrastructure.repository.entity.ProductEntity;
-import org.springframework.dao.DataIntegrityViolationException;
-import org.springframework.dao.EmptyResultDataAccessException;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Component
 public class ProductBdRepository implements ProductRepository {
@@ -39,12 +34,12 @@ public class ProductBdRepository implements ProductRepository {
   @Override
   public List<Product> findAll() {
     List<ProductEntity> productEntities = repo.findAll();
-    return productEntities.stream().map(ProductEntity::toProduct).collect(Collectors.toList());
+    return productEntities.stream().map(ProductEntity::toProduct).toList();
   }
 
   @Override
   public List<Product> findAllByIdIn(List<Long> productIds) {
-    return repo.findAllByIdIn(productIds).stream().map(ProductEntity::toProduct).collect(Collectors.toList());
+    return repo.findAllByIdIn(productIds).stream().map(ProductEntity::toProduct).toList();
   }
 
   @Override
